--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css", "node_modules/bootstrap/dist/css/bootstrap.min.css", "src/assets/album.css"
+              "node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.min.css",
+              "src/styles.css", 
+              "src/assets/album.css",
+              "src/assets/blog.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.min.js", "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap-material-design/dist/js/bootstrap-material-design.min.js",
+              "node_modules/@fortawesome/fontawesome-free/js/all.js"
             ]
           },
           "configurations": {
