--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.1",
+    "bootstrap-material-design": "^4.1.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "ngx-spinner": "^6.1.2",
+    "popper": "^1.0.1",
     "popper.js": "^1.14.3",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
@@ -34,6 +36,7 @@
     "@angular/cli": "~6.2.8",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@fortawesome/fontawesome-free": "^5.6.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
